fix(eligibility-start): desktop - spacing below h2 is reduced

--- a/benefits/static/css/styles.css
+++ b/benefits/static/css/styles.css
@@ -563,7 +563,7 @@ footer .footer-links li a:visited {
     --media-item-icon-size: calc(90rem / 16);
     --media-item-gap: calc(62rem / 16);
     --media-item-icon-margin: calc(32rem / 16);
-    --media-title-margin-top: calc(64rem / 16);
+    --media-title-margin-top: calc(32rem / 16);
   }
 }
 
